refactor: Update provider references in schemas and transform methods
Ensure getting compile time error if trying to pass a non-typed provider - providers are defined as enum and mapped from an enum to a provider config, if the provider doesn't exist in the enum we get a compile time error.
