# internal/openapi/openapi.go
@@ -18,7 +18,7 @@ func GetSchemas(schema *OpenAPISchema) map[string]SchemaProperty {
 		field := t.Field(i)
 
 		// Skip Config and Providers as they have special structures
-		if field.Name == "Config" || field.Name == "Providers" {
+		if field.Name == "Config" || field.Name == "Provider" {
 			continue
 		}
 
@@ -73,8 +73,8 @@ func populatePropertyNames(properties map[string]Property) {
 type OpenAPISchema struct {
 	Components struct {
 		Schemas struct {
-			Config    Config    `yaml:"Config"`
-			Providers Providers `yaml:"Providers"`
+			Config   Config   `yaml:"Config"`
+			Provider Provider `yaml:"Provider"`
 
 			ProviderAuthType                      SchemaProperty `yaml:"ProviderAuthType"`
 			MessageRole                           SchemaProperty `yaml:"MessageRole"`
@@ -109,7 +109,7 @@ type Config struct {
 	XConfig ConfigSchema `yaml:"x-config"`
 }
 
-type Providers struct {
+type Provider struct {
 	XProviderConfigs map[string]ProviderConfig `yaml:"x-provider-configs"`
 }
 
